<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.QuestionsActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:gravity="top|center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/text1"
            android:textStyle="normal"
            android:textSize="25sp"
            android:gravity="center"
            android:text="@string/what_country_does_this_flag_belong_too"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <ImageView
            android:layout_marginTop="15dp"
            android:id="@+id/image_flag"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:contentDescription="@string/this_is_image"
            tools:src = "@drawable/japan"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10"
            android:layout_marginTop="15dp">
            
            <ProgressBar
                android:id="@+id/progress_bar1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                style="?android:attr/progressBarStyleHorizontal"
                android:max="10"
                android:minHeight="50dp"
                android:indeterminate="false"
                tools:progress="7"/>

            <TextView
                android:id="@+id/text_view_progress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="0/10"
                android:textSize="10sp"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_gravity="center_vertical"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/option_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="normal"
            android:gravity="center"
            tools:text="Option 1"
            android:textColor="@android:color/darker_gray"
            android:layout_marginTop="10dp"
            android:background="@drawable/default_option_border_bg"
            android:minHeight="50dp"
            />
        <TextView
            android:id="@+id/option_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="normal"
            android:gravity="center"
            tools:text="Option 2"
            android:textColor="@android:color/darker_gray"
            android:layout_marginTop="10dp"
            android:background="@drawable/default_option_border_bg"
            android:minHeight="50dp"
            />
        <TextView
            android:id="@+id/option_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="normal"
            android:gravity="center"
            tools:text="Option 3"
            android:textColor="@android:color/darker_gray"
            android:layout_marginTop="10dp"
            android:background="@drawable/default_option_border_bg"
            android:minHeight="50dp"
            />
        <TextView
            android:id="@+id/option_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="normal"
            android:gravity="center"
            tools:text="Option 4"
            android:textColor="@android:color/darker_gray"
            android:layout_marginTop="10dp"
            android:background="@drawable/default_option_border_bg"
            android:minHeight="50dp"
            />

        <Button
            android:id="@+id/button_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check"
            android:layout_marginTop="10dp"
            android:minHeight="50dp"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>